[workspace]
resolver = "2"
members = ["cmd"]

[package]
name = "newbound"
version = "0.1.0"
edition = "2021"

[features]
reload = ["dep:hot-lib-reloader","cmd/reload"]
serde_support = ["serde","serde_json","flowlang/serde_support","ndata/serde_support","cmd/serde_support"]
webview = ["wry"]
java_runtime = ["flowlang/java_runtime"]
python_runtime = ["flowlang/python_runtime"]
javascript_runtime = ["flowlang/javascript_runtime"]

[dependencies]
cmd = { path = "./cmd" }

flowlang = { version="0.3.21" }
ndata = { version="0.3.13" }

hot-lib-reloader = { version = "^0.7", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }
wry = { version="0.27.0", optional=true }

zip = { version="0.6.4", features=["deflate-miniz"] }
local-ip-address = "^0.5"
aes = "^0.8"
walkdir = "2.3.2"
blake2 = "^0.10"
state = "0.5.3"

[[bin]]
name = "newbound"
path = "src/main.rs"

[lib]

