[workspace]
resolver = "2"

[package]
name = "newbound"
version = "0.1.0"
edition = "2021"

[features]
reload = ["dep:hot-lib-reloader"] # Add subcrates to reload here
serde_support = ["serde","serde_json","flowlang/serde_support","ndata/serde_support","newbound_core/serde_support"]
webview = ["wry"]
java_runtime = ["flowlang/java_runtime"]
python_runtime = ["flowlang/python_runtime"]
javascript_runtime = ["flowlang/javascript_runtime"]

[dependencies]
newbound_core = { path = "./newbound_core" }

flowlang = { version="0.3.27" }
ndata = "0.3.15"

serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }
wry = { version="0.27.0", optional=true }
hot-lib-reloader = { version = "^0.7", optional = true }

aes = "^0.8"
blake2 = "^0.10"

[[bin]]
name = "newbound"
path = "src/main.rs"


