[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[lints.rust]
non_camel_case_types = "allow"

[features]
serde_support = ["serde","serde_json","flowlang/serde_support","ndata/serde_support"]
reload = []

[dependencies]
flowlang = "0.3.20"
ndata = "0.3.13"
serde = { version = "1.0.155", features = ["derive"], optional = true }
serde_json = { version = "1.0.94", optional = true }
