[package]
name = "newbound_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
aes = "^0.8"
blake2 = "^0.10"
wry = { version="0.27.0", optional=true }
hot-lib-reloader = { version = "^0.7", optional = true }
flowlang = { version="0.3.28" }
ndata = { version="0.3.16" }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }

[features]
serde_support = ["serde","serde_json","flowlang/serde_support","ndata/serde_support"]
java_runtime = ["flowlang/java_runtime"]
python_runtime = ["flowlang/python_runtime"]
javascript_runtime = ["flowlang/javascript_runtime"]
reload = ["dep:hot-lib-reloader"] # WTF?
webview = ["wry"]
